--- a/www/schedule.html
+++ b/www/schedule.html
@@ -1,22 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Class Schedule</title>
-  <link rel="stylesheet" href="css/style.css" />
+  <link rel="stylesheet" href="css/main.css" />
+  <link rel="stylesheet" href="css/schedule.css" />
 </head>
 <body>
   <div class="container">
     <header>
-      <center><h1>Weekly Class Schedule</h1></center>
-      <hr>
+      <div class="site-brand">
+        <div class="logo">SLM</div>
+        <div class="title">
+          <h1>Weekly Class Schedule</h1>
+          <p>Upload your timetable or add schedule items below</p>
+        </div>
+      </div>
+
+      <button id="themeToggle" class="theme-toggle" aria-pressed="false" title="Toggle light / dark">🌙</button>
+      <nav class="menubar" aria-label="Primary">
+        
+        <ul>
+          <li><a class="menu-btn" href="index.html">Home</a></li>
+          <li><a class="menu-btn" href="todo.html">To‑Do List</a></li>
+          <li><a class="menu-btn" href="about.html">About</a></li>
+        </ul>
+      </nav>
     </header>
 
     <main>
-      <!-- Upload timetable area -->
       <section class="upload-form">
-        <label for="timetableFile">Upload timetable (JPG, PNG):</label>
+        <label for="timetableFile">Upload timetable (JPG, PNG)</label>
+        <small class="muted">recommended max: 1080 × 1080 — large uploads will be rejected</small>
         <input type="file" id="timetableFile" accept=".jpg,.jpeg,.png,image/*" />
         <div class="preview">
           <p id="previewNotice">No file chosen</p>
@@ -30,64 +46,14 @@
 
       <hr>
 
-      <!-- Schedule entry form -->
-      <section class="schedule-form">
-        <h2>Add Schedule Item</h2>
-        <form id="scheduleForm">
-          <div>
-            <label for="course">Course</label>
-            <input type="text" id="course" name="course" required />
-          </div>
-          <div>
-            <label for="date">Date</label>
-            <input type="date" id="date" name="date" required />
-          </div>
-          <div>
-            <label for="time">Time</label>
-            <input type="time" id="time" name="time" required />
-          </div>
-          <div>
-            <label for="notes">Notes</label>
-            <textarea id="notes" name="notes" rows="2" placeholder="Optional notes..."></textarea>
-          </div>
-          <div>
-            <button type="submit" id="addScheduleBtn">Add to Schedule</button>
-          </div>
-        </form>
-      </section>
-
-      <hr>
-
-      <!-- Scheduled items list -->
-      <section class="schedule-list">
-        <h2>Your Schedule</h2>
-        <ul id="scheduleItems"></ul>
-      </section>
-
-      <!-- Existing timetable table (kept for legacy use) -->
-      <table class="schedule-table" id="timetable">
-        <thead>
-          <tr>
-            <th>Time</th>
-            <th>Monday</th>
-            <th>Tuesday</th>
-            <th>Wednesday</th>
-            <th>Thursday</th>
-            <th>Friday</th>
-          </tr>
-        </thead>
-        <tbody id="timetableBody">
-          <!-- Classes will be added here -->
-        </tbody>
-      </table>
-    </main>
-
+      
     <footer>
       <a href="index.html" class="back-btn">Back</a>
     </footer>
   </div>
 
-  <script src="js/schedule.js"></script>
+  <script src="js/main.js" defer></script>
+  <script src="js/schedule.js" defer></script>
   <script src="js/schedule-app.js" defer></script>
 </body>
 </html>
