Added animations and transitions

--- a/www/index.html
+++ b/www/index.html
@@ -5,6 +5,8 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Student Life Manager</title>
   <link rel="stylesheet" href="css/main.css"/>
+    <!-- This is optional UX enhancements style -->
+  <link rel="stylesheet" href="css/ux.css"/>
 </head>
 <body>
   <div class="container">
@@ -51,5 +53,7 @@
   
 
   <script src="js/main.js" defer></script>
+  <!-- This is optional UX enhancements script -->
+  <script src="js/ux.js" defer></script>
 </body>
 </html>
