--- a/www/schedule.html
+++ b/www/schedule.html
@@ -5,6 +5,8 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Class Schedule</title>
   <link rel="stylesheet" href="css/main.css" />
+    <!-- This is optional UX enhancements style -->
+  <link rel="stylesheet" href="css/ux.css" />
   <link rel="stylesheet" href="css/schedule.css" />
 </head>
 <body>
@@ -53,6 +55,8 @@
   </div>
 
   <script src="js/main.js" defer></script>
+  <!-- This is optional UX enhancements script wasn't needed-->
+  <script src="js/ux.js" defer></script>
   <script src="js/schedule.js" defer></script>
   <script src="js/schedule-app.js" defer></script>
 </body>
