--- a/www/todo.html
+++ b/www/todo.html
@@ -3,6 +3,7 @@
 <head>
   <title>To-Do List</title>
   <link rel="stylesheet" href="css/main.css" />
+  <link rel="stylesheet" href="css/ux.css" />
   <link rel="stylesheet" href="css/todo.css" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 </head>
@@ -42,6 +43,7 @@
   </div>
 
   <script src="js/main.js" defer></script>
+  <script src="js/ux.js" defer></script>
   <script src="js/todo.js" defer></script>
 </body>
 </html>
