--- a/www/about.html
+++ b/www/about.html
@@ -5,6 +5,8 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Student Life Manager</title>
   <link rel="stylesheet" href="css/main.css" />
+  <!-- This is optional UX enhancements style -->
+  <link rel="stylesheet" href="css/ux.css" />
   <link rel="stylesheet" href="css/about.css" />
 </head>
 <body>
@@ -41,10 +43,10 @@
       <section class="card">
         <h2>Development team</h2>
         <ul class="team">
-          <li><strong>Kaylia</strong> — CSS</li>
-          <li><strong>Roshane Shaw</strong> — HTML</li>
-          <li><strong>Joel Willie</strong> — JavaScript</li>
-          <li><strong>Tyrese Green</strong> — JavaScript</li>
+      <li><strong>Kaylia</strong> — CSS</li>
+      <li><strong>Roshane Shaw</strong> — HTML</li>
+      <li><strong>Joel Willie</strong> — JavaScript</li>
+      <li><strong>Tyrese Green</strong> — JavaScript</li>
         </ul>
       </section>
 
@@ -56,5 +58,7 @@
     </footer>
 </div>
   <script src="js/main.js" defer></script>
+    <!-- This is optional UX enhancements script -->
+  <script src="js/ux.js" defer></script>
 </body>
 </html>
